[gd_scene load_steps=8 format=2]

[ext_resource path="res://screens/Main.gd" type="Script" id=1]
[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://screens/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://art/sound_fx/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://art/music/House In a Forest Loop.ogg" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1024, 0, 0, 0, 0, 0, 1024, 600, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 1 )
Mob = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.360784, 0.164706, 0.643137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 512, 160 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Timers" type="Node" parent="."]

[node name="MobTimer" type="Timer" parent="Timers"]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="Timers"]

[node name="StartTimer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Audio" type="Node" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="Timers/MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="Timers/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="Timers/StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
